istio-demonstration-files/configuration/bookinfo-gateway-routeconfig.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: productpage
    app.kubernetes.io/component: gateways
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: gateways
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.1.9-1
    chart: gateways
    heritage: Tiller
    istio: bookinfo-gateway
    maistra-version: 1.1.9
    maistra.io/owner: istio-system
    release: istio
  name: bookinfo-gateway-route
spec:
  port:
    targetPort: http
  subdomain: ""
  to:
    kind: Service
    name: productpage
    weight: 100
  wildcardPolicy: None
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - productpage-bookinfo.apps.ocp4i.lab.dtcc.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-rule
  namespace: bookinfo
spec:
  hosts:
  - productpage-bookinfo.apps.ocp4i.lab.dtcc.com
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
